# VHbb

./: CMakeLists.txt  README.md
CorrsAndSysts/: .gitlab-ci.yml  CMakeLists.txt
CorrsAndSysts/CorrsAndSysts/: BDTSyst.h  CorrsAndSysts.h  CorrsAndSysts2.h
CorrsAndSysts/Root/: BDTSyst.cxx  CorrsAndSysts.cxx  CorrsAndSysts2.cxx
CorrsAndSysts/cmt/: Makefile.RootCore
CorrsAndSysts/data/: TMVAClassification_BDTCategories_0lep_2jet_ttbar_ME_bb.weights.xml  TMVAClassification_BDTCategories_0lep_2jet_ttbar_ME_bc.weights.xml  TMVAClassification_BDTCategories_0lep_2jet_ttbar_ME_oth.weights.xml  TMVAClassification_BDTCategories_0lep_2jet_ttbar_PS_bb.weights.xml  TMVAClassification_BDTCategories_0lep_2jet_ttbar_PS_bc.weights.xml  TMVAClassification_BDTCategories_0lep_2jet_ttbar_PS_oth.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_ME_bb.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_ME_bc.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_ME_oth.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_PS_bb.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_PS_bc.weights.xml  TMVAClassification_BDTCategories_0lep_3jet_ttbar_PS_oth.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_ME_bb.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_ME_bc.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_ME_oth.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_PS_bb.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_PS_bc.weights.xml  TMVAClassification_BDTCategories_1lep_2jet_ttbar_PS_oth.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_ME_bb.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_ME_bc.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_ME_oth.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_PS_bb.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_PS_bc.weights.xml  TMVAClassification_BDTCategories_1lep_3jet_ttbar_PS_oth.weights.xml
CxAODMaker_VHbb/: .gitlab-ci.yml  CMakeLists.txt  README_Muon.md  README_VHLepton.md
CxAODMaker_VHbb/CxAODMaker_VHbb/: AnalysisBase_VHbb.h  ElectronHandler_VHbb.h  FatJetHandler_VHbb.h  JetHandler_VHbb.h  MuonHandler_VHbb.h  PhotonHandler_VGamma.h  PhotonHandler_VHbb.h
CxAODMaker_VHbb/Root/: AnalysisBase_VHbb.cxx  ElectronHandler_VHbb.cxx  FatJetHandler_VHbb.cxx  JetHandler_VHbb.cxx  LinkDef.h  MuonHandler_VHbb.cxx  PhotonHandler_VGamma.cxx  PhotonHandler_VHbb.cxx
CxAODMaker_VHbb/cmt/: Makefile.RootCore
CxAODMaker_VHbb/data/: framework-run-Vgamma.cfg  framework-run-automatic.cfg  framework-run-vbfa.cfg  framework-run.cfg
CxAODMaker_VHbb/util/: hsg5framework.cxx
CxAODReader/: CMakeLists.txt
CxAODReader/CxAODReader/: AnalysisReader.h  AnalysisReader.icc  BootstrapGenerator.h  EasyTree.h  HistFastSvc.h  HistFastSvc.icc  HistNameSvc.h  HistSvc.h  Histo.h  MVAReader.h  MVATree.h  OSTree.h  ObjectReader.h  ObjectReader.icc  ObjectReaderBase.h  StaticMVATree.h  TH1Bootstrap.h  TH1DBootstrap.h  TH2Bootstrap.h  TH2DBootstrap.h  randomc.h  sfmt.h  stocc.h
CxAODReader/Root/: AnalysisReader.cxx  BootstrapGenerator.cxx  EasyTree.cxx  HistNameSvc.cxx  HistSvc.cxx  Histo.cxx  LinkDef.h  MVAReader.cxx  MVATree.cxx  OSTree.cxx  ObjectReader.cxx  ObjectReaderBase.cxx  TH1Bootstrap.cxx  TH2Bootstrap.cxx  mersenne.cxx  sfmt.cxx  stoc1.cxx  stoc2.cxx  userintf.cxx
CxAODReader/cmt/: Makefile.RootCore
CxAODReader_VHbb/: CMakeLists.txt  README.md
CxAODReader_VHbb/CxAODReader_VHbb/: AnalysisReader_VBFHbb1Ph.h  AnalysisReader_VGamma.h  AnalysisReader_VHQQ.h  AnalysisReader_VHQQ0Lep.h  AnalysisReader_VHQQ1Lep.h  AnalysisReader_VHQQ2Lep.h  AnalysisReader_VHbb0Lep.h  AnalysisReader_VHbb1Lep.h  AnalysisReader_VHbb2Lep.h  AnalysisReader_VHcc0Lep.h  AnalysisReader_VHcc1Lep.h  AnalysisReader_VHcc2Lep.h  AnalysisReader_VHreso0Lep.h  AnalysisReader_VHreso1Lep.h  AnalysisReader_VHreso2Lep.h  MVAApplication_TMVA.h  MVATree_BoostedVHbb.h  MVATree_VBFHbb.h  MVATree_VHbb.h  VHResRegions.h
CxAODReader_VHbb/Root/: AnalysisReader_VBFHbb1Ph.cxx  AnalysisReader_VGamma.cxx  AnalysisReader_VHQQ.cxx  AnalysisReader_VHQQ0Lep.cxx  AnalysisReader_VHQQ1Lep.cxx  AnalysisReader_VHQQ2Lep.cxx  AnalysisReader_VHbb0Lep.cxx  AnalysisReader_VHbb1Lep.cxx  AnalysisReader_VHbb2Lep.cxx  AnalysisReader_VHcc0Lep.cxx  AnalysisReader_VHcc1Lep.cxx  AnalysisReader_VHcc2Lep.cxx  AnalysisReader_VHreso0Lep.cxx  AnalysisReader_VHreso1Lep.cxx  AnalysisReader_VHreso2Lep.cxx  LinkDef.h  MVAApplication_TMVA.cxx  MVATree_BoostedVHbb.cxx  MVATree_VBFHbb.cxx  MVATree_VHbb.cxx  VHResRegions.cxx
CxAODReader_VHbb/cmt/: Makefile.RootCore
CxAODReader_VHbb/data/: VHbb_fitparameters.txt  Zjets_fitparameters.txt  diboson_fitparameters.txt  fitparameters.txt  framework-read-Vgamma.cfg  framework-read-automatic.cfg  framework-read-vbfa.cfg  framework-read-vhcc.cfg  framework-read.cfg  signal_fitparameters.txt  ttbar_fitparameters.txt
CxAODReader_VHbb/scripts/: TMVAClassification.C
CxAODReader_VHbb/util/: hsg5frameworkReadCxAOD.cxx
CxAODTools/: CMakeLists.txt  README.md
CxAODTools/CxAODTools/: BTaggingTool.h  CommonProperties.h  ConfigField.h  ConfigField.icc  ConfigFieldBase.h  ConfigStore.h  CutFlowCounter.h  CxAODToolsDict.h  DummyEvtSelection.h  EventSelection.h  EvtSelTruthAllocator.h  EvtSelTruthAllocator.icc  EvtWeightVariations.h  FakeFactor.h  GetTMVAVars.h  ITMVAApplicationTool.h  ITMVATrainingTool.h  InvDeltaROverlapTool.h  LumiMetaDataTool.h  ObjectDecorator.h  ObjectDecorator.icc  OvCompat.h  OverlapRegister.h  OverlapRegisterAccessor.h  OverlapRegisterAccessor.icc  OverlapRemoval.h  PUReweightingTool.h  ParticleLinker.h  PhJetOverlapTool.h  PtRecoTool.h  ReturnCheck.h  TMVAApplicationTool.h  TMVATrainingTool.h  TriggerInfo.h  TriggerScaleFactorsMET.h  TriggerTool.h  Utilities.h  XSectionProvider.h  selection.xml  sumOfWeightsProvider.h  (+3 more)
CxAODTools/Root/: BTaggingTool.cxx  CommonProperties.cxx  ConfigField.cxx  ConfigStore.cxx  FakeFactor.cxx  (+27 more)
CxAODTools_VHbb/: CMakeLists.txt  README.md
KinematicFit/: CMakeLists.txt  ChangeLog
(+478 files in other folders)
